<?xml version="1.0" encoding="utf-8"?>

<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/white"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            android:layout_margin="10dp">

            <LinearLayout
                android:id="@+id/llRecomm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivProduct"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/dummy_img_aut" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <com.bidme.utils.CustomTextView
                        android:id="@+id/tvProductname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginTop="5dp"
                        android:layout_toLeftOf="@+id/tvPrice"
                        android:text="@string/aucproductname"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <com.bidme.utils.CustomTextView
                        android:id="@+id/tvPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="5dp"
                        android:text="@string/price"
                        android:textColor="@color/text_bg"
                        android:textSize="14sp" />

                    <com.bidme.utils.CustomTextView
                        android:id="@+id/tvLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvProductname"
                        android:layout_alignParentLeft="true"
                        android:layout_marginTop="5dp"
                        android:layout_toLeftOf="@+id/tvTime"
                        android:drawableLeft="@drawable/ic_location_small"
                        android:drawablePadding="5dp"
                        android:text="@string/location"
                        android:textSize="12sp"
                        android:visibility="visible" />

                    <com.bidme.utils.CustomTextView
                        android:id="@+id/tvTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvProductname"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="5dp"
                        android:text="@string/day_ago"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <com.bidme.utils.CustomButton
                        android:id="@+id/btnSignIn"
                        android:layout_width="160dp"
                        android:layout_height="30dp"
                        android:layout_below="@+id/tvTime"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/button_selector"
                        android:text="@string/mao"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                </RelativeLayout>


            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</layout>
