<?xml version="1.0" encoding="utf-8"?>
<layout
   >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/off_white"
        android:orientation="vertical"
        tools:context=".aution.Details_auction"
        xmlns:numberpicker="http://schemas.android.com/apk/res-auto">

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="5dp"
            app:cardBackgroundColor="@android:color/widget_edittext_dark"
            app:cardCornerRadius="0dp"
            app:cardElevation="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:background="@drawable/card_shap_shadow">

                <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:padding="10dp"
                    android:src="@drawable/ic_back" />

                <com.bidme.utils.CustomTextViewBold
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/somedetails"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/cardView"
            android:layout_margin="10dp">


            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/llImages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ivAddImages"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_gravity="center"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_add_image" />


                    <com.bidme.utils.CustomTextViewBold
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:text="@string/add_photo"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <com.bidme.utils.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/first_select"
                        android:textSize="12sp" />
                </LinearLayout>


                <com.bidme.utils.CustomTextViewBold
                    android:id="@+id/addMoreimages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:layout_margin="10dp"

                    android:drawablePadding="5dp"
                    android:drawableTop="@drawable/ic_addphoto"
                    android:textSize="14sp"
                    android:text="Add more images"
                    android:textColor="@color/blue"
                    android:visibility="gone" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">


                </android.support.v7.widget.RecyclerView>




                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:counterEnabled="true"
                    android:layout_marginTop="10dp"
                    app:counterMaxLength="10">


                    <com.bidme.utils.CustomEditText
                        android:id="@+id/etTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:editable="true"
                        android:focusable="true"
                        android:hint="Title"
                        android:singleLine="true"
                        android:textSize="14sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tvbrandname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >


                    <com.bidme.utils.CustomEditText
                        android:id="@+id/etBrandName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:editable="false"
                        android:focusable="false"
                        android:hint="@string/brand_name"
                        android:singleLine="true"
                        android:textSize="14sp" />
                </android.support.design.widget.TextInputLayout>



                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tvshortdescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:counterEnabled="true"
                    app:counterMaxLength="30">

                    <com.bidme.utils.CustomEditText
                        android:id="@+id/etshortDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/short_description"
                        android:textSize="14sp" />
                </android.support.design.widget.TextInputLayout>


                <com.bidme.utils.CustomTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mention"
                    android:visibility="gone" />




                <android.support.design.widget.TextInputLayout
                    android:visibility="gone"
                    android:id="@+id/tvdescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:counterEnabled="true"
                    app:counterMaxLength="30">

                    <com.bidme.utils.CustomEditText
                        android:id="@+id/etDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_description"
                        android:textSize="14sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.bidme.utils.CustomEditText
                        android:id="@+id/etAdress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:editable="false"
                        android:focusable="false"
                        android:hint="@string/address"

                        android:singleLine="true"
                        android:textSize="14sp" />
                </android.support.design.widget.TextInputLayout>

               <!-- <com.samyotech.getrid.utils.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/addauctionprice"
                    android:layout_marginTop="@dimen/_10sdp"/>



                    <com.travijuu.numberpicker.library.NumberPicker

                        android:layout_width="150dp"
                        android:layout_height="40dp"
                        numberpicker:min="0"
                        numberpicker:max="10"
                        numberpicker:value="-5"
                        numberpicker:unit="1"
                        android:background="@color/off_white"
                        numberpicker:focusable="false"
            />-->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.bidme.utils.CustomEditText
                        android:id="@+id/etPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/addauctionprice"
                        android:text="10"
                        android:inputType="number"
                        android:focusable="false"
                        android:editable="false"
                        android:maxLength="10"
                        android:singleLine="true"
                        android:textSize="14sp" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.bidme.utils.CustomEditText
                        android:id="@+id/et_S_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:editable="false"
                        android:focusable="false"

                        android:hint="@string/s_date"
                        android:singleLine="true"
                        android:textSize="14sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <com.bidme.utils.CustomEditText
                        android:id="@+id/et_end_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:editable="false"
                        android:focusable="false"
                        android:hint="@string/edate"
                        android:singleLine="true"
                        android:textSize="14sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.bidme.utils.CustomEditText
                        android:id="@+id/et_owner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nfo"
                        android:inputType="number"
                        android:singleLine="true"
                        android:textSize="14sp"
                        android:visibility="gone" />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:id="@+id/line1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <com.bidme.utils.CustomTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:hint="@string/insureddoc"
                        android:textSize="14sp"
                      />

                    <RadioGroup
                        android:id="@+id/rGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"

                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rbYes"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.0"
                            android:checked="true"
                            android:text="YES"
                            android:textSize="14sp" />

                        <RadioButton
                            android:id="@+id/rbNo"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.0"
                            android:text="NO"
                            android:textSize="14sp" />
                    </RadioGroup>

                </LinearLayout>


                <com.bidme.utils.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint=""
                    android:lines="2"
                    android:textColor="@color/gray" />


                <com.bidme.utils.CustomButton
                    android:id="@+id/btnpost"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/button_selector"
                    android:clickable="true"
                    android:text="@string/add_auction"
                    android:layout_marginBottom="5dp"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>
        </ScrollView>

        <RelativeLayout
            android:id="@+id/rlSnackbar"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>
</layout>